package big_talk.chapter8.factorymethod;

abstract class Creator {
	public abstract Product factoryMethod();
}

